fix pybind11 high-level binds

--- a/bindings/pybind11/CMakeLists.txt
+++ b/bindings/pybind11/CMakeLists.txt
@@ -9,7 +9,8 @@ pybind11_add_module(pybind11_idyntree idyntree.cpp
 
 target_link_libraries(pybind11_idyntree PUBLIC idyntree-core
                                                idyntree-model
-                                               idyntree-modelio)
+                                               idyntree-modelio
+                                               idyntree-high-level)
 
 # The generated Python dynamic module must have the same name as the pybind11
 # module, i.e. `bindings`.
