--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -100,7 +100,7 @@ jobs:
           CIBW_ENVIRONMENT_LINUX: AUDITWHEEL_PLAT=manylinux_2_28_x86_64
           CIBW_BEFORE_BUILD_LINUX: |
             dnf update -y &&\
-            dnf install -y eigen3-devel libxml2-devel
+            dnf install -y eigen3-devel libxml2-devel irrlicht-dev
           CIBW_TEST_COMMAND: "python -c 'import idyntree.bindings'"
 
       - uses: actions/upload-artifact@v3
