--- a/src/visualization/CMakeLists.txt
+++ b/src/visualization/CMakeLists.txt
@@ -104,7 +104,7 @@ endif()
 
 if(IDYNTREE_USES_ASSIMP)
     target_compile_definitions(${libraryname} PRIVATE IDYNTREE_USES_ASSIMP)
-    target_link_libraries(${libraryname} PRIVATE assimp)
+    target_link_libraries(${libraryname} PRIVATE assimp::assimp)
 endif()
 
 
