--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,6 +164,7 @@ jobs:
         os:
           - ubuntu-latest
         docker_image:
+          - "debian:buster-backports"
           - "ubuntu:20.04"
           - "ubuntu:22.04"
 
