--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -184,6 +184,11 @@ jobs:
             git build-essential cmake libace-dev coinor-libipopt-dev libeigen3-dev swig \
             libxml2-dev liboctave-dev python3-dev python3-numpy valgrind libassimp-dev libirrlicht-dev curl unzip libglfw3-dev
 
+    - name: Install CMake 3.16 [Docker/Debian Buster]
+      if: matrix.docker_image == 'debian:buster-backports'
+      run: |
+        apt-get -y -t buster-backports install cmake
+
     - name: Install files to enable compilation of mex files [apt]
       run: |
         curl -L -O https://github.com/robotology/robotology-vcpkg-ports/releases/download/storage/msdk_R2020b_mexa64.zip
