Add CI with apt dependencies of Debian 10 Buster backports and fix build (#1148)
* Add CI with Debian 10 Buster backports

* Update CHANGELOG.md

* Fix compilation of IDYNTREE_USES_ASSIMP option in Debian Buster 10

* Install CMake 3.16 in Debian Buster

* Fix outdated assimp-related CMake code

--- a/src/visualization/CMakeLists.txt
+++ b/src/visualization/CMakeLists.txt
@@ -102,11 +102,17 @@ if(IDYNTREE_USES_MESHCATCPP)
     target_link_libraries(${libraryname} PRIVATE MeshcatCpp::MeshcatCpp)
 endif()
 
-if(IDYNTREE_USES_ASSIMP)
-    target_compile_definitions(${libraryname} PRIVATE IDYNTREE_USES_ASSIMP)
+if (IDYNTREE_USES_ASSIMP)
+  target_compile_definitions(${libraryname} PRIVATE IDYNTREE_USES_ASSIMP)
+  # See similar code in solid-shapes CMakeLists.txt
+  if((assimp_VERSION AND assimp_VERSION VERSION_GREATER_EQUAL 5.0) OR WIN32)
     target_link_libraries(${libraryname} PRIVATE assimp::assimp)
+  else()
+    target_include_directories(${libraryname} PRIVATE "${ASSIMP_INCLUDE_DIRS}")
+    link_directories("${ASSIMP_LIBRARY_DIRS}")
+    target_link_libraries(${libraryname} PRIVATE "${ASSIMP_LIBRARIES}")
+  endif()
 endif()
-
 
 
 install(TARGETS ${libraryname}
