Added possibility to visualize custom solid shapes in the irrlicht visualizer.

--- a/src/visualization/CMakeLists.txt
+++ b/src/visualization/CMakeLists.txt
@@ -18,6 +18,7 @@ if(IDYNTREE_USES_IRRLICHT)
                                                src/JetsVisualization.h
                                                src/VectorsVisualization.h
                                                src/FrameVisualization.h
+                                               src/ShapesVisualization.h
                                                src/Texture.h
                                                src/TexturesHandler.h
                                                src/Light.h
@@ -30,6 +31,7 @@ if(IDYNTREE_USES_IRRLICHT)
                                                src/JetsVisualization.cpp
                                                src/VectorsVisualization.cpp
                                                src/FrameVisualization.cpp
+                                               src/ShapesVisualization.cpp
                                                src/Texture.cpp
                                                src/TexturesHandler.cpp
                                                src/Light.cpp
