--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -5,7 +5,7 @@
 # framework for Matlab and Octave, it is only included if testing
 # is enabled in Matlab or Octave
 if( (IDYNTREE_USES_OCTAVE OR IDYNTREE_USES_MATLAB OR IDYNTREE_GENERATE_MATLAB) AND
-    IDYNTREE_COMPILE_TESTS )
+    BUILD_TESTING )
     # We save the location of MOxUnit in a variable that is then accessible to the test
     set(IDYNTREE_INTERNAL_MOXUNIT_PATH "${CMAKE_CURRENT_LIST_DIR}/MOxUnit/MOxUnit" PARENT_SCOPE)
 endif()
