--- a/src/model_io/codecs/CMakeLists.txt
+++ b/src/model_io/codecs/CMakeLists.txt
@@ -71,9 +71,9 @@ install(TARGETS ${libraryname}
 
 set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS ${libraryname})
 
-if(IDYNTREE_COMPILE_TESTS)
+if(BUILD_TESTING)
     add_subdirectory(tests)
-endif(IDYNTREE_COMPILE_TESTS)
+endif(BUILD_TESTING)
 
 
 # Install deprecated headers
