--- a/src/optimalcontrol/CMakeLists.txt
+++ b/src/optimalcontrol/CMakeLists.txt
@@ -131,6 +131,6 @@ install(FILES ${OCSOLVERS_PUBLIC_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR
 
 set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS ${libraryname})
 
-if(IDYNTREE_COMPILE_TESTS)
+if(BUILD_TESTING)
   add_subdirectory(tests)
 endif()
