--- a/src/solid-shapes/CMakeLists.txt
+++ b/src/solid-shapes/CMakeLists.txt
@@ -46,6 +46,6 @@ install(TARGETS ${libraryname}
 
 set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS ${libraryname})
 
-if(IDYNTREE_COMPILE_TESTS AND IDYNTREE_USES_ASSIMP)
+if(BUILD_TESTING AND IDYNTREE_USES_ASSIMP)
     add_subdirectory(tests)
 endif()
