--- a/src/model/tests/CMakeLists.txt
+++ b/src/model/tests/CMakeLists.txt
@@ -19,5 +19,6 @@ endmacro()
 add_unit_test(Joint)
 add_unit_test(Link)
 add_unit_test(Model)
+add_unit_test(ModelTransformers)
 add_unit_test(SensorsList)
 add_unit_test(ThreeAxisForceTorqueContactSensor)
