--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -103,6 +103,8 @@ jobs:
             rpm --import https://repo.almalinux.org/almalinux/RPM-GPG-KEY-AlmaLinux &&\
             dnf update -y &&\
             dnf install -y eigen3-devel libxml2-devel
+            # Pre-install NumPy > 2.0
+            pip install "numpy>2.0"
           CIBW_TEST_COMMAND: "python -c 'import idyntree.bindings'"
 
       - uses: actions/upload-artifact@v3
