Re-enable valgrind tests for IntegrationTestiCubTorqueEstimation

--- a/src/tests/integration/CMakeLists.txt
+++ b/src/tests/integration/CMakeLists.txt
@@ -43,9 +43,7 @@ add_integration_test(Dynamics)
 add_integration_test(DenavitHartenberg)
 add_integration_test(ReducedModelWithFT)
 add_integration_test(ModelTransformers)
-
-# See issue https://github.com/robotology/idyntree/issues/367
-add_integration_test_no_valgrind(iCubTorqueEstimation)
+add_integration_test(iCubTorqueEstimation)
 
 # Until we fix it, add DynamicsLinearization test but don't execute it
 add_integration_exe(DynamicsLinearization)
