--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -61,7 +61,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: dist
+          name: sdist
           path: dist/*.tar.gz
 
   build_wheels:
@@ -109,7 +109,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: dist
+          name: wheels
           path: ./wheelhouse/*.whl
 
   upload_pypi:
@@ -124,7 +124,6 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
-          name: dist
           path: dist
 
       - name: Inspect dist folder
