Add fallback for CONDA_PREFIX env variable

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -153,7 +153,7 @@ if (IDYNTREE_USES_PYTHON_PYBIND11 OR IDYNTREE_USES_PYTHON)
         file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/__init__.py "library_dll_path = os.path.join(os.path.dirname(__file__),'${RELATIVE_PATH_BETWEEN_INIT_PY_AND_DLL_DIRECTORY}')${NEW_LINE}")
         file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/__init__.py "# Avoid to call add_dll_directory if not necessary,${NEW_LINE}")
         file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/__init__.py "# for example if the library to find are already found in the proper location in a conda${NEW_LINE}")
-        file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/__init__.py "if(library_dll_path != os.path.join(os.environ['CONDA_PREFIX'],'Library','bin') and library_dll_path != os.path.join(os.environ['CONDA_PREFIX'],'bin')):${NEW_LINE}")
+        file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/__init__.py "if(library_dll_path != os.path.join(os.environ.get('CONDA_PREFIX', ''),'Library','bin') and library_dll_path != os.path.join(os.environ.get('CONDA_PREFIX', ''),'bin')):${NEW_LINE}")
         file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/__init__.py "    if(os.path.exists(library_dll_path)):${NEW_LINE}")
         file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/__init__.py "        os.add_dll_directory(library_dll_path)${NEW_LINE}")
     endif()
