--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,8 +100,7 @@ jobs:
       shell: bash -l {0}
       run: |
         # Additional dependencies only useful on Linux
-        # See https://github.com/robotology/robotology-superbuild/issues/477
-        micromamba install xorg-libx11 xorg-libxrandr freeglut mesa-libgl-cos6-x86_64 mesa-libgl-devel-cos6-x86_64
+        micromamba install xorg-xorgproto libgl-devel
 
     - name: Print used environment [Conda]
       shell: bash -l {0}
