Add xorg-libxrandr dependency in conda and pixi

--- a/pixi.toml
+++ b/pixi.toml
@@ -61,5 +61,7 @@ python = "*"
 numpy = "*"
 yarp = "*"
 osqp-eigen = "*"
+# Transitive Irrlicht/SDL dependency
+xorg-libxrandr = "*"
 # Find a way to add this only for supported envs
 # icub-main = "*"
