--- a/bindings/python/tests/CMakeLists.txt
+++ b/bindings/python/tests/CMakeLists.txt
@@ -9,3 +9,4 @@ add_test(NAME PythonJointTests COMMAND ${Python3_EXECUTABLE} joints.py)
 add_test(NAME PythonHelperTests COMMAND ${Python3_EXECUTABLE} helpers.py)
 add_test(NAME PythonModelLoaderTests COMMAND ${Python3_EXECUTABLE} modelloader.py)
 add_test(NAME PythonExtWrenchesAndJointTorquesEstimatorUnitTest COMMAND ${Python3_EXECUTABLE} ExtWrenchesAndJointTorquesEstimatorUnitTest.py)
+add_test(NAME PythonInverseKinematicsTests COMMAND ${Python3_EXECUTABLE} invkin.py)
