Do not download fortran compiler in micromamba ci job

--- a/ci_env.yml
+++ b/ci_env.yml
@@ -1,10 +1,9 @@
 name: idyntreedev
 channels:
   - conda-forge
-  - robotology
 dependencies:
   - cmake 
-  - compilers
+  - cxx-compiler
   - make 
   - ninja
   - pkg-config 
