--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -18,16 +18,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build_type: [Release]
         os: [ubuntu-22.04, windows-latest, macos-13]
         matlab_version: [R2022a, R2022b, R2023a]
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: Configure VS Toolchain (Windows)
-      if: contains(matrix.os, 'windows')
-      uses: ilammy/msvc-dev-cmd@v1.13.0
 
     - uses: conda-incubator/setup-miniconda@v3
       with:
@@ -77,28 +72,20 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake -GNinja -DCMAKE_INSTALL_PREFIX=${CONDA_PREFIX} -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DMATLAB_FIND_DEBUG:BOOL=ON -DIDYNTREE_USES_MATLAB:BOOL=ON -DBUILD_TESTING:BOOL=ON -DIDYNTREE_USES_ASSIMP:BOOL=ON -DIDYNTREE_USES_IPOPT:BOOL=ON -DIDYNTREE_USES_IRRLICHT:BOOL=ON -DIDYNTREE_USES_YARP:BOOL=OFF -DIDYNTREE_USES_ICUB_MAIN:BOOL=OFF -DIDYNTREE_USES_OSQPEIGEN:BOOL=ON ..
-
-    - name: Setup compilation env variables [Conda/Windows]
-      if: contains(matrix.os, 'windows')
-      shell: bash -l {0}
-      run: |
-        bash_vc_install=${VCToolsInstallDir//\\//}
-        compiler_path=${bash_vc_install}bin/Hostx64/x64/cl.exe
-        echo "CC=${compiler_path}" >> $GITHUB_ENV
-        echo "CXX=${compiler_path}" >> $GITHUB_ENV
+        cmake -GNinja -DCMAKE_INSTALL_PREFIX=${CONDA_PREFIX} -DCMAKE_BUILD_TYPE=Release -DMATLAB_FIND_DEBUG:BOOL=ON -DIDYNTREE_USES_MATLAB:BOOL=ON -DBUILD_TESTING:BOOL=ON -DIDYNTREE_USES_ASSIMP:BOOL=ON -DIDYNTREE_USES_IPOPT:BOOL=ON -DIDYNTREE_USES_IRRLICHT:BOOL=ON -DIDYNTREE_USES_YARP:BOOL=OFF -DIDYNTREE_USES_ICUB_MAIN:BOOL=OFF -DIDYNTREE_USES_OSQPEIGEN:BOOL=ON ..
 
     - name: Configure [Conda - Windows]
+      shell: cmd /C CALL {0}
       if: contains(matrix.os, 'windows')
       run: |
         mkdir build
         cd build
-        cmake  -GNinja -DCMAKE_INSTALL_PREFIX=${CONDA_PREFIX}/Library -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DMATLAB_FIND_DEBUG:BOOL=ON -DIDYNTREE_USES_MATLAB:BOOL=ON -DBUILD_TESTING:BOOL=ON -DIDYNTREE_USES_ASSIMP:BOOL=ON -DIDYNTREE_USES_IPOPT:BOOL=ON -DIDYNTREE_USES_IRRLICHT:BOOL=ON -DIDYNTREE_USES_YARP:BOOL=OFF -DIDYNTREE_USES_ICUB_MAIN:BOOL=OFF -DIDYNTREE_USES_OSQPEIGEN:BOOL=ON ..
+        cmake  -GNinja -DCMAKE_INSTALL_PREFIX=%CONDA_PREFIX%\Library -DCMAKE_BUILD_TYPE=Release -DMATLAB_FIND_DEBUG:BOOL=ON -DIDYNTREE_USES_MATLAB:BOOL=ON -DBUILD_TESTING:BOOL=ON -DIDYNTREE_USES_ASSIMP:BOOL=ON -DIDYNTREE_USES_IPOPT:BOOL=ON -DIDYNTREE_USES_IRRLICHT:BOOL=ON -DIDYNTREE_USES_YARP:BOOL=OFF -DIDYNTREE_USES_ICUB_MAIN:BOOL=OFF -DIDYNTREE_USES_OSQPEIGEN:BOOL=ON ..
 
     - name: Build
       run: |
         cd build
-        cmake --build . --config ${{ matrix.build_type }}
+        cmake --build . --config Release
 
     - name: Inspect libraries linked by iDynTreeMEX.mexa64 [Conda/Linux]
       if: contains(matrix.os, 'ubuntu')
