--- a/src/model/tests/CMakeLists.txt
+++ b/src/model/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ macro(add_unit_test classname)
     endif()
 endmacro()
 
+add_unit_test(ContactWrench)
 add_unit_test(Joint)
 add_unit_test(Link)
 add_unit_test(Model)
