Use `libsdformat` instead of `sdformat` in `pixi.toml`
Co-authored-by: Silvio Traversaro <silvio@traversaro.it>

--- a/pixi.toml
+++ b/pixi.toml
@@ -59,7 +59,7 @@ python = "*"
 numpy = "*"
 yarp = "*"
 osqp-eigen = "*"
-sdformat = "*"
+libsdformat = "*"
 # Find a way to add this only for supported envs
 # icub-main = "*"
 
